# jwhois

./: .dir-locals.el  .gitignore  .mailmap  Makefile.am  NEWS  README  README-hacking  bootstrap.conf  cfg.mk  configure.ac  jwhois.spec.in
doc/: jwhois.texi
example/: jwhois.conf
include/: cache.h  http.h  init.h  jconfig.h  jwhois.h  lookup.h  rwhois.h  utils.h  whois.h
m4/: ax_code_coverage.m4
po/: POTFILES.in
src/: Makefile.am  cache.c  dns.c  gai_strerror.c  http.c  http.h  init.c  init.h  jconfig.c  jconfig.h  jwhois.c  jwhois.h  lookup.c  lookup.h  rwhois.c  rwhois.h  string.c  system.h  utils.c  utils.h  whois.c  whois.h
tests/: config.sh  macros.h  utils_dump_arguments.c  utils_strjoinv.c
